feat: further scenarios, explanation, better dashboards, context improve, story background