@@ -25,11 +25,11 @@ All services run on a shared Docker bridge network (`bff-net`). k6 runs inside D
 │   ├── package.json            # Node.js dependencies
 │   └── Dockerfile              # Node 20 Alpine
 ├── bff-blocking/               # Java 24 + Spring Boot 3.4.5 + Undertow + RestClient
-│   ├── pom.xml                 # Excludes tomcat, includes undertow, actuator, micrometer-prometheus
+│   ├── pom.xml                 # Excludes tomcat, includes undertow, actuator, micrometer-prometheus, httpclient5
 │   ├── Dockerfile              # Multi-stage: maven build → JRE 24 Alpine runtime
 │   └── src/main/java/.../
 │       ├── BffBlockingApplication.java
-│       ├── config/RestClientConfig.java    # RestClient bean, baseUrl=http://mock-backend:8081
+│       ├── config/RestClientConfig.java    # Apache HttpClient5 + pool metrics (active/idle/pending/max)
 │       ├── controller/ProxyController.java # GET /api/data → returns raw JSON string
 │       └── resources/application.yml       # Undertow IO=4/Worker=200, actuator, micrometer tags
 ├── bff-reactive/               # Java 24 + Spring Boot 3.4.5 + Netty + WebClient
@@ -37,7 +37,7 @@ All services run on a shared Docker bridge network (`bff-net`). k6 runs inside D
 │   ├── Dockerfile              # Same structure as bff-blocking
 │   └── src/main/java/.../
 │       ├── BffReactiveApplication.java
-│       ├── config/WebClientConfig.java     # WebClient bean, baseUrl=http://mock-backend:8081
+│       ├── config/WebClientConfig.java     # Named ConnectionProvider "mock-backend" + pool metrics
 │       ├── controller/ProxyController.java # GET /api/data → returns Mono<ResponseEntity<String>>
 │       └── resources/application.yml       # max-in-memory-size=1MB, micrometer tags
 ├── bff-golang/                 # Go 1.22 HTTP proxy with Prometheus metrics
@@ -54,8 +54,7 @@ All services run on a shared Docker bridge network (`bff-net`). k6 runs inside D
 │       ├── datasources/datasource.yml      # Auto-configured Prometheus at http://prometheus:9090
 │       ├── dashboards/dashboard.yml        # File-based provider
 │       └── dashboards/
-│           ├── bff-overview.json           # Original 9-panel dashboard
-│           └── bff-comprehensive.json      # Comprehensive 16-panel dashboard (recommended)
+│           └── bff-comprehensive.json      # Unified 22-panel dashboard (6 rows, includes connection pool)
 ├── docker-compose.yml          # Profiles: blocking, reactive, golang. k6 service for Docker-based runs
 ├── results/                    # k6 NDJSON + GC logs + summary JSONs (mounted volume)
 ├── plans/
@@ -89,17 +88,41 @@ Infrastructure services (mock-backend, prometheus, grafana) always run regardles
 
 ## JVM Flags
 
-### ParallelGC (Tuned)
+### ParallelGC (Default — No Tuning)
 ```
--XX:+UseParallelGC -XX:NewRatio=1 -XX:SurvivorRatio=6 -Xms1536m -Xmx1536m
+-XX:+UseParallelGC -Xms1536m -Xmx1536m
 -Xlog:gc*:file=/results/gc.log:time,uptime,level,tags:filecount=5,filesize=10m
 ```
+JVM uses all defaults: adaptive sizing enabled, default generation ratios, default GCTimeRatio=99.
+
+### ParallelGC (Production-Tuned)
+```
+-XX:+UseParallelGC -XX:MaxGCPauseMillis=200 -XX:GCTimeRatio=9 -XX:SurvivorRatio=4
+-XX:ParallelGCThreads=2 -XX:NewSize=650m -XX:MaxNewSize=750m -XX:-UseAdaptiveSizePolicy
+-XX:MaxHeapFreeRatio=100 -Xms1536m -Xmx1536m
+-Xlog:gc*:file=/results/gc.log:time,uptime,level,tags:filecount=5,filesize=10m
+```
+Derived from real production GC tuning. Key changes: fixed young gen (650-750m), disabled adaptive sizing, GCTimeRatio=9 (10% GC time budget vs default 1%), SurvivorRatio=4 (larger survivors = less promotion).
 
 ### Generational ZGC
 ```
 -XX:+UseZGC -XX:+ZGenerational -Xms1536m -Xmx1536m
 -Xlog:gc*:file=/results/gc.log:time,uptime,level,tags:filecount=5,filesize=10m
 ```
+
+## Test Scenarios (7 total)
+
+| # | SUT | GC Strategy | SCENARIO_NAME |
+|---|-----|-------------|---------------|
+| 1 | BFF-Blocking | ParallelGC default (no tuning) | `blocking-parallelgc-default` |
+| 2 | BFF-Blocking | ParallelGC production-tuned | `blocking-parallelgc-tuned` |
+| 3 | BFF-Blocking | Generational ZGC | `blocking-zgc` |
+| 4 | BFF-Reactive | ParallelGC default (no tuning) | `reactive-parallelgc-default` |
+| 5 | BFF-Reactive | ParallelGC production-tuned | `reactive-parallelgc-tuned` |
+| 6 | BFF-Reactive | Generational ZGC | `reactive-zgc` |
+| 7 | BFF-Golang | Go runtime GC | `golang` |
+
+Scenarios 1 vs 2 (and 4 vs 5) demonstrate the real-world impact of GC tuning — from default ParallelGC to production-hardened parameters that halved response time in production.
 
 ## Data Sources
 
@@ -115,6 +138,8 @@ Infrastructure services (mock-backend, prometheus, grafana) always run regardles
 
 Key metrics exposed by Spring Boot Actuator + Micrometer:
 
+### Server-Side Metrics (inbound HTTP)
+
 | Metric | Description |
 |--------|-------------|
 | `http_server_requests_seconds_bucket` | HTTP latency histogram (for percentile queries) |
@@ -128,6 +153,27 @@ Key metrics exposed by Spring Boot Actuator + Micrometer:
 | `process_cpu_usage` | CPU usage gauge |
 | `jvm_threads_live_threads` | Live thread count |
 
+### Outbound Connection Pool Metrics
+
+**Blocking variant** (Apache HttpClient5 via custom Micrometer gauges):
+
+| Metric | Description |
+|--------|-------------|
+| `httpclient_pool_active` | Connections currently leased (in use) |
+| `httpclient_pool_idle` | Connections idle in pool (available for reuse) |
+| `httpclient_pool_pending` | Requests waiting for a connection (queue depth) |
+| `httpclient_pool_max` | Max connections allowed (default: 25 total, 5 per route) |
+
+**Reactive variant** (Reactor Netty named ConnectionProvider "mock-backend"):
+
+| Metric | Description |
+|--------|-------------|
+| `reactor_netty_connection_provider_active_connections` | Active connections |
+| `reactor_netty_connection_provider_idle_connections` | Idle connections |
+| `reactor_netty_connection_provider_pending_connections` | Pending requests waiting for connection |
+
+**Key insight**: The reactive variant defaults to `maxConnections = 2 * availableCPUs` (min 8). With 2 CPUs in the container, this means only ~4-8 outbound connections to the mock backend. At 200 concurrent VUs, most requests queue in the connection pool. The `pending` metric reveals this bottleneck.
+
 All metrics have an `application` tag (set via `management.metrics.tags.application` in application.yml) with values `bff-blocking`, `bff-reactive`, or `bff-golang`.
 
 ## Known Issues & Fixes Applied
@@ -136,8 +182,11 @@ All metrics have an `application` tag (set via `management.metrics.tags.applicat
 2. **Alpine IPv6** — `localhost` resolves to `::1` in Alpine. All health checks use `127.0.0.1`.
 3. **Mock payload size** — 500 items = 224KB. Reduced to 150 items ≈ 47KB.
 4. **k6 handleSummary** — Must return actual text for stdout; returning empty string suppresses output.
+5. **Histogram buckets missing** — By default, Spring Boot does NOT publish `http_server_requests_seconds_bucket`. Must set `management.metrics.distribution.percentiles-histogram.http.server.requests: true` in application.yml. Without this, `histogram_quantile()` in Grafana returns no data.
 
-## Scenario 1 Results (BFF-Blocking + ParallelGC)
+## Scenario 1 Results (BFF-Blocking + ParallelGC — old tuning with NewRatio=1, SurvivorRatio=6)
+
+> **Note**: This was run with the previous ParallelGC tuning (`-XX:NewRatio=1 -XX:SurvivorRatio=6`). The new scenario structure uses "default" (no tuning) and "production-tuned" (from real production experience). This data will be replaced when the new scenarios are run.
 
 ```
 HTTP STATUS CODES
@@ -164,6 +213,6 @@ GC (from gc.log)
 
 - `docker compose down` — stops containers, preserves volumes
 - `docker compose down -v` — stops containers AND removes Prometheus/Grafana data
-- Prometheus auto-deletes data older than 1 hour (configured retention)
+- Prometheus auto-deletes data older than 3 hours (configured retention)
 - k6 NDJSON files are large (3-4 GB each); summary JSONs are ~1 KB
 - To start fresh: `docker compose down -v` then `docker compose up -d mock-backend prometheus grafana`
